[EMMA-61] Production EMMA service - In file-upload.js:   * Increased the timeout to 3 minutes.   * Changed handling of progress bar visibility. - CSS:   * Made progress bar more visible.   * Made uploading file name bold.   * Corrected percentage so that it appears on the right-hand side.   * While the server is processing the file, change the percentage to show     "saving...".

--- a/app/assets/stylesheets/feature/_file_upload.scss
+++ b/app/assets/stylesheets/feature/_file_upload.scss
@@ -744,6 +744,8 @@ $form-gap-narrow: $form-gap / 3;
         @include grid-row(1);
         @include grid-column-span;
 
+        z-index: $z-uppy-progress;
+
         @if $status-bar-is-white-space {
 
             min-height: 3rem;
@@ -779,8 +781,9 @@ $form-gap-narrow: $form-gap / 3;
         z-index:         $z-uppy-informer;
 
         p {
-            word-break: break-word;
-            box-shadow: 0 0 0.5rem 0.625rem white;
+            font-weight: bold;
+            word-break:  break-word;
+            box-shadow:  0 0 0.5rem 0.25rem white;
         }
     }
 }
