--- a/app/assets/stylesheets/shared/_variables.scss
+++ b/app/assets/stylesheets/shared/_variables.scss
@@ -140,7 +140,8 @@ $z-controls:        100;
 $z-tooltip:         200;
 $z-scroll-to-top:   300;
 $z-popup:           400;
-$z-uppy-informer:   500;
+$z-uppy-progress:   500;
+$z-uppy-informer:   600;
 $z-overlay:         10000;
 
 //=============================================================================
